V0.8.0.0
- added Cef browser
- changed shapefile tester from IE to Cef

V0.7.0.0
- added script editor
- added script filter
- added script action

V0.6.0.0
- added shapefile support (management and test)
- added shapefile area filter
- added assign area name to field action

V0.5.0.0
- added collection filter
- added collection action (add and delete)
- added collection editor and macro
- added GSAK locations to location filters
- added Excel export action

V0.4.0.0
- added Formula Solver function and macro

V0.3.0.0
- added set macro flag action
- added clear macro flag execute once action
- updates default GSAKWrapper macro
- fix for Cutom fields (now also addes global fields to the list)

V0.2.0.0
- macro's saved as ANSI instead of UTF8
- added geocache counter filter (to limit selected geocaches)
- added History file (this file)
- changed macro destination folder for flow and sequence macro (not program folder anymore)
- added export to GPX action
- added custom date field filter
- added export to GGZ action

V0.1.0.0
- initial release