@@ -1,5 +1,5 @@
 #*******************************************
-# MacVersion = 0.4
+# MacVersion = 0.5
 # MacDescription = Executes or installs the GSAKwrapper
 # MacAuthor = Mars Express
 # MacFileName = GSAKWrapper.gsk
@@ -8,20 +8,23 @@
 #  GSAKWrapper macro  Version History
 # V0.3 7-11-15   First release
 # V0.4 7-11-15   Cosmetic changes
+# V0.5 25-11-15 Enabled update check, changed install check, changed Label2 visibility, Published
 
-#UPDATECHECK #Frequency=5 #check for macro update on gsak forum
-VERCHECK Version=8.2.0.00 (Please update to a more recent Version of GSAK)
+UPDATECHECK Frequency=10 #check for macro update on gsak forum
+VERCHECK Version=8.2.0.00 
 
 Option Explicit=Yes
 
 Declare Var=$execParam Type=String
-Declare Var=$form Type=String
+Declare Var=$Form Type=String
 Declare Var=$FormExit Type=String
 Declare Var=$GlobalcachingEuLogo Type=String
 Declare Var=$GSAKWrapperPath Type=String
 Declare Var=$infoText Type=String
+Declare Var=$Installed Type=Boolean
 Declare Var=$result Type=String
 Declare Var=$settingsdb Type=String
+
 
 $settingsdb = "C:\programdata\GSAKWrapper\settings.db3"
 $execParam="-d=" + Quote($_CurrentDatabase)
@@ -29,39 +32,48 @@ $execParam="-d=" + Quote($_CurrentDatabase)
 
 
 While True # Main loop
+
+	$Installed = False  #install check
+	If FileExists($settingsdb)
+		$result = Sqlite("open", $settingsdb)
+		$_sql = "select  item_value from Settings where item_name='ApplicationPath'"  # get scopename
+		$GSAKWrapperPath = Sqlite("sql", $_sql)
+		$Installed = FileExists($GSAKWrapperPath)
+	endif
+
+	if $Installed = True
+		$Form = EditForm($Form,"Label2","Visible","No")
+	else 
+		$Form = EditForm($Form,"Label2","Visible","Yes")
+	endif
+
 	if $_StartShift = False
-		If FileExists($settingsdb)
-			$result = Sqlite("open", $settingsdb)
-			# get scopename
-			$_sql = "select  item_value from Settings where item_name='ApplicationPath'"
-			$GSAKWrapperPath = Sqlite("sql", $_sql)
-			if FileExists($GSAKWrapperPath)
-			  RUNPGM PGM=$GSAKWrapperPath  parms=$execParam Wait=Yes Hide=No
-			  Return #exit wrapper means exit macro.
-			endif
+		if $Installed = True
+		  RUNPGM PGM=$GSAKWrapperPath  parms=$execParam Wait=Yes Hide=No 
+		  Return #exit wrapper means exit macro.
 		endif
 	endif
+	
+	#Startshift or GSAKwrapper not found, so display form
+		$FormExit = Form($form,"")
+		BeginCase
+			Case ($FormExit="SystemExit") OR ($FormExit = "Button_Cancel")
+				Return
+			Case $FormExit="Button_Wiki"
+				WEB URL="https://github.com/GlobalcachingEU/GSAKWrapper/wiki"
+			Case $FormExit="Button_Download"
+				WEB URL="https://github.com/GlobalcachingEU/GSAKWrapper/releases"
+			Case ($FormExit="GlobalcachingEuLogo")
+				WEB URL="http://www.globalcaching.eu"
+		EndCase
 		
-	#GSAKwrapper not found, so display form
-	$FormExit = Form($form,"")
-	BeginCase
-		Case ($FormExit="SystemExit") OR ($FormExit = "Button_Cancel")
-			Return
-		Case $FormExit="Button_Wiki"
-			WEB URL="https://github.com/GlobalcachingEU/GSAKWrapper/wiki"
-		Case $FormExit="Button_Download"
-			WEB URL="https://github.com/GlobalcachingEU/GSAKWrapper/releases"
-		Case ($FormExit="GlobalcachingEuLogo")
-			WEB URL="http://www.globalcaching.eu"
-	EndCase
-
 EndWhile
 	
 	
 ###################
 
 <data> VarName=$infoText 
-GSAK Wrapper is a GSAK database filter/export utility that can perform actions on one or more databases without the use of macro's. 
+GSAK Wrapper is a GSAK database filter/export utility that can perform actions on one or more GSAK-databases without the use of user written macro's. 
 <enddata>
 
 #The author of GSAK didn't take part in the development of this application.
@@ -353,8 +365,6 @@ RK5CYII=
 <enddata>
 
 
-
-
 <Data> VarName=$form
 #********************************************************************
 # Form generated by GSAK form designer on Sat 07-Nov-2015 10:23:09
@@ -362,7 +372,7 @@ RK5CYII=
 
 Name = Form1
   Type = Form
-  Caption = GSAKwrapper companion macro
+  Caption = GSAK Wrapper companion macro
   Height = 253
   Width = 436
 
