@@ -1,6 +1,8 @@
 V0.8.0.0
 - added Cef browser
 - changed shapefile tester from IE to Cef
+- updated macro (that is now on GSAK forum)
+- added show on online map action
 
 V0.7.0.0
 - added script editor
